# spider

./: .gitignore  pyproject.toml
.vitepress/: config.mts
docs/: index.md  package-lock.json
docs/.vitepress/: config.mts
docs/development/: add-robot.md
docs/guide/: quick-start.md
docs/usage/: viewers.md
docs/workflows/: workflow-mjwp.md
examples/: run_all_mjwp.sh  run_hdmi.py  run_mjwp.py
examples/config/: default.yaml  unitree_g1_lafan.yaml
examples/config/override/: gigahand.yaml  humanoid.yaml  oakink.yaml  oakink_fast.yaml
spider/: config.py  io.py
spider/assets/robots/ability/: left.xml  right.xml
spider/assets/robots/allegro/: left.xml  right.xml
spider/assets/robots/inspire/: right.xml
spider/assets/robots/schunk/: left.xml  right.xml
spider/assets/robots/unitree_g1/: scene.xml  scene_soft.xml
spider/assets/robots/xhand/: left.xml  right.xml
spider/postprocess/: get_success_rate.py
spider/preprocess/: decompose.py  decompose_fast.py  ik.py
spider/process_datasets/: gigahand.py  gmr.py
spider/simulators/: mjwp.py  mjwp_eq.py
spider/viewers/: __init__.py  viser_viewer.py
